# singal-admin-program

./: CMakeLists.txt  MainController.h  README.md  computerfacility.cpp  computerfacility.h  facility.cpp  facility.h  main.cpp  maincontroller.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  membermanager.cpp  membermanager.h  networkservice.cpp  networkservice.h  reservationmanager.cpp  reservationmanager.h  simplefacility.cpp  simplefacility.h  timerwidget.cpp  timerwidget.h  websocketserver.cpp  websocketserver.h
